add page not found

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,8 +5,10 @@
   "Введите логин": "Enter your login",
   "Введите пароль": "Enter your password",
   "Пожалуйста, войдите в систему": "Please login",
+  "Страница не найдена": "Page not found",
   "Войти": "Login",
   "Выйти": "Log out",
+  "Назад": "Back",
   "Выберите город": "Select a city",
   "Добавить город": "Add city",
   "Удалить город?": "Delete city?",
