--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -5,8 +5,10 @@
   "Введите логин": "Введите логин",
   "Введите пароль": "Введите пароль",
   "Пожалуйста, войдите в систему": "Пожалуйста, войдите в систему",
+  "Страница не найдена": "Страница не найдена",
   "Войти": "Войти",
   "Выйти": "Выйти",
+  "Назад": "Назад",
   "Выберите город": "Выберите город",
   "Добавить город": "Добавить город",
   "Удалить город?": "Удалить город?",
